package epcis;
syntax = "proto3";
 
import "epcis.proto";

message TransactionEvent {
    required string event_time  = 1; 
    optional string record_time = 2; 
    string event_time_zone_offset = 3  [default = "-04:00"]; 
    optional BaseExtension baseExtension = 4; 
    repeated EpcList epc_list = 5; 
	optional ActionEnum action = 6 [default = ADD];
	optional string biz_step = 7;
	optional string disposition = 8;
	optional string read_point = 9;
	optional string biz_location = 10;
	repeated BizTransaction biz_transactions = 11;
}
